completed about page

--- a/pages/home.html
+++ b/pages/home.html
@@ -7,6 +7,66 @@
     <title>Home page</title>
 </head>
 <body>
-    
+    <nav id="side-nav">
+        <img 
+        src="https://media.licdn.com/dms/image/v2/C5603AQGHQulcU9qCwQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1610132888800?e=1730937600&v=beta&t=Qt5QZz-QzJcAfp2Bv6tBQMZlL22OmGE6G0YJzpnwl7I" 
+        alt="profile-image" />
+        <ul class="nav-list">
+            <a href="#about">
+                <li>
+                    About
+                </li>
+            </a>
+            <a href="#experience">
+                <li>
+                    Experience
+                </li>
+            </a>
+            <a href="#education">
+                <li>
+                    Education
+                </li>
+            </a>
+            <a href="#skills">
+                <li>
+                    Skills
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <div id="main-container">
+        <div class="container" id="about">
+            <h1 class="name">
+                KENNETH <span class="green">HO</span>
+            </h1>
+            <p>
+                San Francisco, CA - (303) 555-5555 - myworkemail@gmail.com
+            </p>
+            <p >
+                Software Engineer
+            </p>
+            <p>
+                I am an entry full stack developer that is knowledgeable in leveraging HTML and CSS language to build functional webpages. I value user friendly interfaces and high quality code for end users. I am experienced in working in SCRUM teams to quickly deliver products. 
+            </p>
+            <ul id="contact-icons">
+                <a href="https://www.linkedin.com/in/kenneth-ho-/">
+                    <img src="https://img.icons8.com/?size=100&id=8808&format=png&color=1A1A1A" alt="linkedin-icon" target="_blank"/>
+                </a>
+                <a href="https://github.com/hoken92">
+                    <img src="https://img.icons8.com/?size=100&id=3tC9EQumUAuq&format=png&color=1A1A1A" alt="github-icon" target="_blank" />
+                </a>
+            </ul>
+            
+        </div>
+        <div class="container" id="experience">
+
+        </div>
+        <div class="container" id="education">
+
+        </div>
+        <div class="container" id="skills">
+
+        </div>
+    </div>
 </body>
 </html>
