completed experience page

--- a/pages/home.html
+++ b/pages/home.html
@@ -46,20 +46,80 @@
                 Software Engineer
             </p>
             <p>
-                I am an entry full stack developer that is knowledgeable in leveraging HTML and CSS language to build functional webpages. I value user friendly interfaces and high quality code for end users. I am experienced in working in SCRUM teams to quickly deliver products. 
+                I am an entry software developer that is knowledgeable in leveraging HTML and CSS to build webpages. I value user friendly interfaces and high quality code for end users. I am experienced in working in SCRUM teams to quickly deliver products. 
             </p>
             <ul id="contact-icons">
-                <a href="https://www.linkedin.com/in/kenneth-ho-/">
-                    <img src="https://img.icons8.com/?size=100&id=8808&format=png&color=1A1A1A" alt="linkedin-icon" target="_blank"/>
+                <a href="https://www.linkedin.com/in/kenneth-ho-/" target="_blank">
+                    <img src="https://img.icons8.com/?size=100&id=8808&format=png&color=1A1A1A" alt="linkedin-icon" />
                 </a>
-                <a href="https://github.com/hoken92">
-                    <img src="https://img.icons8.com/?size=100&id=3tC9EQumUAuq&format=png&color=1A1A1A" alt="github-icon" target="_blank" />
+                <a href="https://github.com/hoken92" target="_blank">
+                    <img src="https://img.icons8.com/?size=100&id=3tC9EQumUAuq&format=png&color=1A1A1A" alt="github-icon" />
                 </a>
             </ul>
             
         </div>
         <div class="container" id="experience">
-
+            <h1>EXPERIENCE</h1>
+            <section class="experience-section">
+                <h3>
+                    QA ENGINEER 
+                    <span class="date-range">
+                        Sept 2022 - Jan 2024
+                    </span>
+                </h3>
+                <p>
+                    GLOO
+                </p>
+                <p>
+                    I developed and automated end-to-end regression tests using Java/Selenium, reviewed outcomes via GitHub Actions and Datadog Dashboards. I am adept at writing and executing SQL queries for effective database management. I utilized developer tools to inspect frontend elements, monitor network activity, and tracked errors through Datadog logging. Defect reports were generated in Shortcut and GitHub, while working closely with development, product teams to prioritize and resolve issues. Additionally, I conduct rigorous regression testing across browsers and mobile devices using BrowserStack to ensure the integrity of application functionality.
+                </p>
+            </section>
+            <section class="experience-section">
+                <h3>
+                    QA ASSOCIATE 
+                    <span class="date-range">
+                        Jan 2021 - March 2022
+                    </span>
+                </h3>
+                <p>
+                    WISH
+                </p>
+                <p>I maintained high-value test cases in TestRail and conducted daily manual regression and smoke testing across mobile and desktop platforms. I developed test plans aligned with business requirements and presented feature demos to enhance testing visibility within the QA team. I reported detailed bugs in JIRA, including Charles Proxy logs, and worked with stakeholders and development teams to resolve issues and ensure timely releases. Additionally, I balanced multiple projects across platforms, focusing on UI, functional, and integration testing, while coordinating QA strategies and release timelines with business and development teams.</p>
+            </section>
+            <section class="experience-section">
+                <h3>
+                    QA ANALYST 
+                    <span class="date-range">
+                        Dec 2019 - Dec 2020
+                    </span>
+                </h3>
+                <p>
+                    UBER
+                </p>
+                <p>
+                    I integrated test suites in JIRA to conduct alpha testing of core flows and edge cases, ensuring features met product requirements on Android and iOS devices. I performed functionality testing, including UI and load screens, to verify vehicle load states, and used Postman to execute API calls for data creation on test accounts, ensuring feature stability.
+                </p>
+            </section>
+            <section class="experience-section">
+                <h3>
+                    QA ANALYST 
+                    <span class="date-range">
+                        April 2018 - March 2019
+                    </span>
+                </h3>
+                <p>COPPER</p>
+                <p>I led weekly planning meetings with product and engineering teams, applying QA methodologies within an agile process. I organized testing strategies and test cases based on product requirements, ensuring streamlined functional settings for consumers. Additionally, I created and executed API automation tests to guarantee the delivery of high-quality APIs for consumer integrations.</p>
+            </section>
+            <section class="experience-section">
+                <h3>
+                    SYSTEMS QA ANALYST 
+                    <span class="date-range">
+                        Aug 2017 - Jan 2018
+                    </span>
+                </h3>
+                <p>WELLS FARGO</p>
+                <p>I executed test cases daily using HP-ALM, ensuring responsive QA across various breakpoints, browsers, mobile devices, virtual machines, and operating systems. I worked in an Agile environment, participating in sprint planning, kickoff, and retrospective meetings to maintain a streamlined development process.</p>
+            </section>
         </div>
         <div class="container" id="education">
 
