completed education page

--- a/pages/home.html
+++ b/pages/home.html
@@ -122,7 +122,40 @@
             </section>
         </div>
         <div class="container" id="education">
-
+            <h1>Education</h1>
+            <section class="education-section">
+                <h3>
+                    PER SCHOLAS 
+                    <span class="date-range">
+                        Aug 2024 - Nov 2024
+                    </span>
+                </h3>
+                <p>
+                    Computer Software Engineering
+                </p>
+            </section>
+            <section class="education-section">
+                <h3>
+                    YEAR UP - FOOTHILL COLLEGE
+                    <span class="date-range">
+                        Aug 2024 - Nov 2024
+                    </span>
+                </h3>
+                <p>
+                    QUALITY ASSURANCE
+                </p>
+            </section>
+            <section class="education-section">
+                <h3>
+                    SAN FRANCISCO STATE UNIVERSITY 
+                    <span class="date-range">
+                        Aug 2010 - June 2014
+                    </span>
+                </h3>
+                <p>
+                    Business
+                </p>
+            </section>
         </div>
         <div class="container" id="skills">
 
