--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
+
+    <!-- Checkmark Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+    <!-- Saira font from Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Home page</title>
 </head>
 <body>
@@ -131,7 +139,7 @@
                     </span>
                 </h3>
                 <p>
-                    Computer Software Engineering
+                    COMPUTER SOFTWARE ENGINEERING
                 </p>
             </section>
             <section class="education-section">
@@ -153,12 +161,21 @@
                     </span>
                 </h3>
                 <p>
-                    Business
+                    BUSINESS
                 </p>
             </section>
         </div>
         <div class="container" id="skills">
-
+            <h1>Skills</h1>
+            <div id="skills-section">
+                <p>PROGRAMMING LANGUAGES</p>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JAVASCRIPT</li>
+                    <li>REACT.JS</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
